--- a/index.css
+++ b/index.css
@@ -1,6 +1,42 @@
-body {
-  margin-bottom: 200px;
+@font-face {
+  font-family: "PP Mori";
+  src: url("./fonts/PPMori-Extralight.otf");
+  font-weight: 200;
 }
+
+@font-face {
+  font-family: "PP Mori";
+  src: url("./fonts/PPMori-ExtralightItalic.otf");
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "PP Mori";
+  src: url("./fonts/PPMori-Regular.otf");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "PP Mori";
+  src: url("./fonts/PPMori-RegularItalic.otf");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "PP Mori";
+  src: url("./fonts/PPMori-SemiBold.otf");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "PP Mori";
+  src: url("./fonts/PPMori-SemiBoldItalic.otf");
+  font-weight: 700;
+  font-style: italic;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -32,14 +68,16 @@ header,
 .eduAI,
 .analyt-recd,
 .insight,
-.foot {
+.foot,
+.last-section {
   padding: 0 1rem;
 }
 
 .eduAI,
 .analyt-recd,
 .insight,
-.foot {
+.foot,
+.last-section {
   max-width: 1440px;
   margin: 0 auto;
 }
@@ -64,7 +102,7 @@ header nav ul {
 
 .hero-main {
   display: grid;
-  grid-template-rows: 200px repeat(4, 150px);
+  grid-template-rows: auto repeat(4, 150px);
   grid-template-columns: repeat(4, 1fr);
   max-width: 1440px;
   margin: 0 auto;
@@ -263,13 +301,14 @@ main {
 
 section.insight {
   display: grid;
+  grid-gap: 30px;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   padding: 50px 0;
 }
 
 .in-hed {
-  grid-column: 1/ span 2;
+  grid-column: 1 / span 2;
   grid-row: 1;
 }
 
@@ -286,19 +325,91 @@ small {
 }
 
 .insight img {
-    grid-row: 2;
-    grid-column: 1;
-    align-self: center;
-    justify-self: center;
-    max-width: 1000px;
+  grid-row: 2;
+  grid-column: 1;
+  align-self: center;
+  justify-self: center;
+  max-width: 1000px;
 }
 
 footer {
-    background-color: #D5E3EE;
+  background-color: #d5e3ee;
 }
 
 .foot h1 {
-    text-align: right;
-    max-width: 1200px;
-    justify-self: end;
+  text-align: right;
+  max-width: 1200px;
+  justify-self: end;
+}
+
+/* sction before footer styling */
+.last-section {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(100px, 1fr));
+  grid-template-rows: auto;
+  grid-gap: 30px;
+  padding-bottom: 50px;
+}
+
+.news-article img {
+  object-fit: contain;
+  height: max-content;
+}
+
+.news-caption {
+  border-top: 1px solid #002545;
+  padding-top: 20px;
+  margin-top: 30px;
+}
+
+.news-caption p {
+  font-family: PP Mori;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 35.5px;
+  color: #002545;
+  letter-spacing: -0.800000011920929px;
+  text-align: left;
+  cursor: pointer;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+
+@media (max-width: 820px) {
+  header {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hero-main {
+    grid-template-rows: auto repeat(2, 150px);
+  }
+
+  .hero-img1,
+  .hero-img2 {
+    grid-row: span 2;
+  }
+
+  .eduAI img {
+    grid-column: 1;
+    grid-row: span 3;
+  }
+
+  .set1 {
+    grid-column: 1 / 4;
+    grid-row: 2;
+  }
+  .set2 {
+    grid-column: 1 / 4;
+    grid-row: 3;
+  }
+  .set4 {
+    grid-column: 1 / 4;
+    grid-row: 4;
+  }
+  .focus-line {
+    grid-row: 6;
+  }
 }
