--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+:root {
+  --h1-text: 3.6rem;
+  --one-rem: 1rem;
+  --big-p: 1.5rem;
+  --big-p-lh: 2.3rem;
+  --large-p: 1.7rem;
+  --large-p-lh: 2rem;
+}
+
 @font-face {
   font-family: "PP Mori";
   src: url("./fonts/PPMori-Extralight.otf");
@@ -73,7 +82,7 @@ header,
 .hero-sub,
 .eduAI,
 .analyt-recd,
-.insight,
+section.insight,
 .foot,
 .last-section {
   padding: 0 1rem;
@@ -81,7 +90,7 @@ header,
 
 .eduAI,
 .analyt-recd,
-.insight,
+section.insight,
 .foot,
 .last-section {
   max-width: 1440px;
@@ -91,8 +100,8 @@ header,
 header nav ul {
   display: flex;
   gap: 30px;
-  font-family: PP Mori;
-  font-size: 15.75px;
+  font-family: "PP Mori";
+  font-size: var(--one-rem);
   font-weight: 400;
   line-height: 20.8px;
   letter-spacing: -0.800000011920929px;
@@ -123,8 +132,8 @@ header nav ul {
 h1 {
   color: #002545;
   max-width: 946.99px;
-  font-family: PP Mori;
-  font-size: 3.6rem;
+  font-family: "PP Mori";
+  font-size: var(--h1-text);
   font-weight: 400;
   /* line-height: 67.54px; */
   letter-spacing: -0.8px;
@@ -134,7 +143,7 @@ h1 {
 }
 
 .hero-sub {
-  grid-column: 3 / 5;
+  grid-column: 1 / 5;
   grid-row: 6;
   justify-self: end;
   align-self: center;
@@ -170,7 +179,7 @@ button {
   border-radius: 300px;
   border: 1px solid #002545;
   opacity: 0px;
-  font-family: PP Mori;
+  font-family: "PP Mori";
   font-size: 16px;
   font-weight: 400;
   line-height: 16.8px;
@@ -185,25 +194,12 @@ button:hover {
   color: #fff;
 }
 
-.focus-line:hover p span {
-  animation: swing 2s infinite;
-}
-
-@keyframes swing {
-  0% {
-    transform: translateX(10px);
-  }
-  100% {
-    transform: translateX(-10px);
-  }
-}
-
 .hero-sub p {
   color: #002545;
-  font-family: PP Mori;
-  font-size: 27.66px;
+  font-family: "PP Mori";
+  font-size: var(--large-p);
   font-weight: 400;
-  line-height: 35.5px;
+  line-height: var(--large-p-lh);
   letter-spacing: -0.800000011920929px;
   text-align: right;
   text-underline-position: from-font;
@@ -221,6 +217,7 @@ main {
   grid-template-columns: 1fr 340px;
   grid-template-rows: auto;
   grid-gap: 30px 5px;
+  margin-bottom: 50px;
 }
 
 .eduAI img {
@@ -236,17 +233,18 @@ main {
   grid-row: 2;
   max-width: 635px;
   font-family: Inter;
-  font-size: 24.92px;
+  font-size: var(--big-p);
   font-weight: 400;
-  line-height: 36.52px;
+  line-height: var(--big-p-lh);
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
 }
 
-.eduAI button {
+.eduAI a {
   grid-column: 1;
   grid-row: 3;
+  width: max-content;
 }
 
 .analyt-recd {
@@ -263,7 +261,7 @@ main {
 }
 
 .analys h2 {
-  font-family: PP Mori;
+  font-family: "PP Mori";
   font-size: 8.5rem;
   font-weight: 400;
   line-height: 169.8px;
@@ -271,7 +269,7 @@ main {
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   color: #e8aa79;
-  padding-bottom: 49px;
+  padding-bottom: 119px;
 }
 
 .analys p {
@@ -285,16 +283,17 @@ main {
   color: #002545;
 }
 
-.analyt-recd span {
+.analyt-recd > span {
   grid-column: 1 / 4;
   align-self: center;
   justify-self: end;
   max-width: 630px;
-  font-family: PP Mori;
+  font-family: "PP Mori";
   font-size: 27.77px;
   font-weight: 400;
   line-height: 35.5px;
   color: #002545;
+  padding-top: 119px;
   /* letter-spacing: -0.800000011920929px; */
   text-align: right;
 }
@@ -307,21 +306,36 @@ main {
   border-top: 1px solid #002545;
   display: grid;
   justify-items: end;
-  cursor: pointer;
+  /* cursor: pointer; */
   padding-top: 58px;
   margin-top: 30px;
 }
 
 .focus-line p {
   max-width: 255px;
-  font-family: PP Mori;
-  font-size: 56.71px;
+  font-family: "PP Mori";
+  font-size: var(--h1-text);
   font-weight: 400;
-  line-height: 67.54px;
+  line-height: 129%;
   letter-spacing: -0.800000011920929px;
   text-align: right;
+  cursor: pointer;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
+}
+
+.focus-line p:hover span {
+  display: inline-block;
+  animation: swing 0.8s ease-in-out forwards infinite;
+}
+
+@keyframes swing {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-10px);
+  }
 }
 
 section.insight {
@@ -337,8 +351,20 @@ section.insight {
   grid-row: 1;
 }
 
+.in-hed h2 {
+  font-family: "PP Mori";
+  font-size: var(--large-p);
+  font-weight: 400;
+  line-height: var(--large-p-lh);
+  letter-spacing: -0.800000011920929px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  max-width: 730px;
+}
+
 small {
-  font-family: PP Mori;
+  font-family: "PP Mori";
   font-size: 12.8px;
   font-weight: 400;
   line-height: 16.11px;
@@ -388,24 +414,36 @@ footer {
 }
 
 .news-caption p {
-  font-family: PP Mori;
-  font-size: 22px;
+  font-family: "PP Mori";
+  font-size: var(--large-p);
   font-weight: 400;
   line-height: 35.5px;
   color: #002545;
   letter-spacing: -0.800000011920929px;
   text-align: left;
   cursor: pointer;
-  text-decoration-line: underline;
+  /* text-decoration-line: underline; */
   text-decoration-style: solid;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
 }
 
 @media (max-width: 820px) {
+  /* responsiveness size */
+  :root {
+    --h1-text: 2.3rem;
+    --one-rem: 0.8rem;
+    --big-p: 1rem;
+    --big-p-lh: 1.6rem;
+    --large-p: 1.2rem;
+    --large-p-lh: 1.5rem;
+  }
+
   header {
     align-items: center;
     justify-content: center;
+    gap: 30px;
+    padding-top: 20px;
   }
 
   .hero-main {
